scripts/hermes_fuzz_executed/fuzz_3_execution
'use strict';

const x = 10;
const arr = ['a', 'b', 'c'];
let y = 5;
const bq = x + y, sqr = bq * bq;
function f(a = x + 5, b = y, c = sqr - bq) {
  a = 100;
  b = 200;
}
class F {
  constructor(a = x + 5, b, c = sqr - bq) {}
}
const f1 = (a = x, b = y, c) => {
  a = 100;
  b = 200;
};
const FClass = class {
  constructor(a = x, b, c = sqr - bq) {}
};
const f2 = (arg1, arg2, arg3 = x + 5) => {
   
  return Promise.resolve('done');
};


Execution Output ------------------:
test.js:11:1: error: invalid statement encountered.
class F {
^~~~~~~~~
test.js:18:16: error: Invalid expression encountered
const FClass = class {
               ^~~~~~~
test.js:23:10: warning: the variable "Promise" was not declared in arrow function "f2"
  return Promise.resolve('done');
         ^~~~~~~
Emitted 2 errors. exiting.
